--- a/src/app/home/home-sidebar/home-sidebar-button/home-sidebar-button.component.html
+++ b/src/app/home/home-sidebar/home-sidebar-button/home-sidebar-button.component.html
@@ -1,5 +1,5 @@
 <div class="age_tab"
-    style="  font-family: 'Prompt', sans-serif; font-size: 16px; font-weight: 700; line-height: 100%;">
+    style="  font-family: 'Prompt', sans-serif; font-size: 16px; font-weight: 700; line-height: 100%;text-align: center;">
     <p>อายุ :</p>
     <div class="inside_age_box">
         <span style="font-weight: 200;justify-content: center;align-items: center;text-align: center; ">
@@ -19,3 +19,4 @@
     </button>
     <img src="img/lab.png" alt="menu" style="width: 50px;height: 50px;">
 </div>
+
