--- a/src/app/home/home-sidebar/home-sidebar-button/home-sidebar-button.component.scss
+++ b/src/app/home/home-sidebar/home-sidebar-button/home-sidebar-button.component.scss
@@ -10,19 +10,18 @@
     align-self: stretch;
     border-radius: 0.625em;
     background: #D9D9D9;
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    box-shadow: 0em 0.25em 0.25em 0em rgba(0, 0, 0, 0.25);
     border: none;
     margin: 0 auto; // เพิ่มบรรทัดนี้เพื่อจัดกลาง
-    text-align: center; // เพิ่มบรรทัดนี้เพื่อจัดข้อความกลาง
 
     .inside_age_box {
         display: flex;
         justify-content: center;
         align-items: center;
-        width: 190px;
-        height: 30px;
+        width: 11.875em;
+        height: 1.875em;
         box-sizing: border-box;
-        border-radius: 10px;
+        border-radius: 0.625em;
         background: #FFF;
         cursor: pointer;
     }
@@ -38,17 +37,17 @@
 
 .menu_btn button {
     font-family: 'Prompt', sans-serif;
-    font-size: 16px;
+    font-size: 1em; /* 16px / 16px */
     font-weight: 700;
     line-height: 100%;
     border: none;
     color: #FFF;
-    margin-top: 20px;
+    margin-top: 1.25em; /* 20px / 16px */
     display: flex;
     justify-content: space-between;
     align-items: center;
     align-self: stretch;
-    padding: 17px 24px;
-    border-radius: 10px;
+    padding: 1.0625em 1.5em;
+    border-radius: 0.625em;
     background: #2C2C2C;
 }
