--- a/src/app/test-home/main-content/second-div/second-div.component.html
+++ b/src/app/test-home/main-content/second-div/second-div.component.html
@@ -43,7 +43,7 @@
             <span>RP</span>
         </div>
         <span style="color: white;">0.00</span>
-        <span style="color: #23395B; font-size: 8px;">bmp</span>
+        <span style="color: #ffffff; font-size: 8px;">bmp</span>
     </div>
     <div class="second-div" style="background-color: #ffffff;">
         <div class="second-div-2" style="background-color: #23395B;">
@@ -57,7 +57,7 @@
             <span>BSA</span>
         </div>
         <span style="color: white;">0.00</span>
-        <span style="color: #23395B; font-size: 8px;">m2</span>
+        <span style="color: #ffffff; font-size: 8px;">m2</span>
     </div>
     <div class="second-div" style="background-color: #ffffff;">
         <div class="second-div-2" style="background-color: #23395B;">
