--- a/src/app/test-home/test-home.component.html
+++ b/src/app/test-home/test-home.component.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class="d-flex justify-content-between" style="width: 112.5rem; height: 59.375rem; background-color: #64686e;">
+    <div class="d-flex justify-content-between" style="width: 112.5rem; height: 59.375rem; background-color: none;">
         <app-nav-bar></app-nav-bar>
 
         <app-main-content></app-main-content>
