--- a/src/app/test-home/main-content/main-content.component.html
+++ b/src/app/test-home/main-content/main-content.component.html
@@ -4,4 +4,17 @@
     <app-first-div></app-first-div>
     <app-second-div></app-second-div>
     <app-third-div></app-third-div>
+    
+    <div style="width: 100%; height: 100%; display: flex; justify-content: space-between;">
+        <div style="width: 640px; height: 100%; padding: 10px; gap: 10px; display: flex; flex-direction: column; ">
+            <app-forth-div-left></app-forth-div-left>
+            <app-forth-div-left-2></app-forth-div-left-2>
+            <app-forth-div-left-3></app-forth-div-left-3>
+        </div>
+
+        <div style="width: 790px; height: 100%; padding: 10px 0px; gap: 30px; display: flex; flex-direction: column; ">
+            <app-forth-div-right></app-forth-div-right>
+            <app-forth-div-right-btn></app-forth-div-right-btn>
+        </div>
+    </div>  
 </div>
