--- a/src/app/home/home-headbar/home-headbar.component.scss
+++ b/src/app/home/home-headbar/home-headbar.component.scss
@@ -10,16 +10,16 @@
    
 
     .info{
-        min-height: 100px;
+        min-height: 4em;
         // background-color: #888888;
     }
 
     .vital_sign{
-        min-height: 100px;
-        background-color: #fc0000;
+        min-height: 3.125em;
+        background-color: #ff3232;
 }
     .headbar_btn{
-        min-height: 100px;
+        min-height: 6.25em;
         background-color: #6b5e83;
         flex:1;
     }
