--- a/src/app/home/home-headbar/home-header-info/home-header-info.component.scss
+++ b/src/app/home/home-headbar/home-header-info/home-header-info.component.scss
@@ -31,10 +31,10 @@
 
 
 .menu_input{
-    border-radius: 50px;
+    border-radius: 3.125em;
     display: flex;
     justify-content: space-between;
-    padding: 10px;
+    padding: 0.625em;
     background-color: #d9d9d9;
     width: 100%;
 }
@@ -58,13 +58,13 @@ button {
 
 span{
     font-family: 'Prompt', sans-serif;
-    font-size: 20px;
+    font-size: 1.25em;
     font-weight: 700;
     display: flex;
     align-items: center;
 }
 
 input{
-    border-radius: 50px;
-    padding: 12px ;
+    border-radius: 3.125em;
+    padding: 0.75em;
 }
