--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -9,11 +9,12 @@
     overflow: hidden;
     display: flex;
     flex-direction: row;
-    padding: 10px;
-    background-color: #fdfdfd;
+    background-color: #ffffff;
     .zone1{
-        width: 300px;
+        width: 18.75em;
         display: flex;
+        background-color: #D9D9D9;
+        
         
         .side-bar{
             position: relative;
@@ -22,14 +23,13 @@
     }
     .zone2{
         flex: 1;
-        // background-color: #ff0000;
         display: flex;
         flex-direction: column;
+        
 
         .header{
             width: 100%;
-            min-height: 100px;
-            // background-color: #00ff00;
+            min-height: 5.25em;
         }
 
         .content{
