--- a/src/app/home/home-headbar/home-header-headbar-btn/home-header-headbar-btn.component.html
+++ b/src/app/home/home-headbar/home-header-headbar-btn/home-header-headbar-btn.component.html
@@ -1,1 +1,51 @@
-<p>home-header-headbar-btn works!</p>
+<div
+  style="
+    width: 100%;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+  "
+>
+  <button class="headbar-btn">
+    <span>Doctor Screen</span>
+  </button>
+  <button class="headbar-btn">
+    <span>ข้อมูลการคัดกรอง</span>
+  </button>
+  <button class="headbar-btn">
+    <span>ประวัติการค้นหา</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Image</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Scan</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Treatment (F1)</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Dental</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Lab (F3)</span>
+  </button>
+  <button class="headbar-btn">
+    <span>X-Ray (F4)</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Refer</span>
+  </button>
+  <button class="headbar-btn">
+    <span>ใบรับรองแพทย์</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Request OR</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Diag and ICD 10</span>
+  </button>
+  <button class="headbar-btn">
+    <span>Medicine (F2)</span>
+  </button>
+</div>
