--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,41 +1,44 @@
-@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=Outfit:wght@100..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Karla:ital,wght@0,200..800;1,200..800&family=Outfit:wght@100..900&family=Prompt:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Sarabun:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap");
 
-.app{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    overflow: hidden;
+.app {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  overflow: hidden;
+  display: flex;
+  flex-direction: row;
+  background-color: #ffffff;
+  .zone1 {
+    width: 18.75em;
     display: flex;
-    flex-direction: row;
-    background-color: #ffffff;
-    .zone1{
-        width: 18.75em;
-        display: flex;
-        background-color: #D9D9D9;
-        
-        
-        .side-bar{
-            position: relative;
-            flex: 1;
-        }
+    background-color: #d9d9d9;
+
+    .side-bar {
+      position: relative;
+      flex: 1;
     }
-    .zone2{
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        
+  }
+  .zone2 {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 
-        .header{
-            width: 100%;
-            min-height: 5.25em;
-        }
-
-        .content{
-            flex: 1;
-            background-color: #0000ff;
-        }
-
+    .header {
+      width: 100%;
+      min-height: 5.25em;
     }
+
+    .content {
+      flex: 1;
+      flex: 1;
+      background-color: #475974;
+      border-radius: 8px;
+      display: flex;
+      align-items: center;
+      align-self: stretch;
+      justify-content: flex-start;
+    }
+  }
 }
